cmake_minimum_required(VERSION 3.26)
project("1 Basics")

set(CMAKE_CXX_STANDARD 23)

add_executable(target_1 "test file.cpp")
add_executable(target_2 "1 Basics.cpp")
add_executable(target_3 "2 Variables and Data Types.cpp")
add_executable(target_4 "3 Conditional.cpp")
add_executable(target_5 "4 Advance Loop.cpp")
add_executable(target_6 "5 Pattern Problem.cpp")
add_executable(target_7 "6 More Pattern Problem.cpp")
add_executable(target_8 "7 Advance Pattern Problems.cpp")
add_executable(target_9 "8 Even More Addvance Patterns.cpp")
add_executable(target_10 "9 Operators.cpp")
add_executable(target_11 "10 While and Do while Loop.cpp")
add_executable(target_12 "11 Binary Conversion .cpp")
add_executable(target_13 "12 Functions.cpp")
add_executable(target_14 "13 Question Practice.cpp")

