cmake_minimum_required(VERSION 3.26)
project("2 DSA")

set(CMAKE_CXX_STANDARD 23)

add_executable(new_target1 "1 Introduction to Array.cpp")
add_executable(new_target2 "2 Master Arrays By Solving Problems.cpp")
add_executable(new_target3 "3 Selection Sort.cpp")
add_executable(new_target4 "4 Bubble Sort.cpp")
add_executable(new_target5 "5 Insertion Sort.cpp")
add_executable(new_target6 "6 Binary Search Intro .cpp")