cmake_minimum_required(VERSION 3.26)
project(Basics)

set(CMAKE_CXX_STANDARD 23)

add_executable(target_1 "test file.cpp")
add_executable(target_2 "1 Basics.cpp")
add_executable(target_3 "2 Variables and Data Types.cpp")
add_executable(target_4 "3 Conditional.cpp")
add_executable(target_5 "4 Advance Loop.cpp")

