cmake_minimum_required(VERSION 3.26)
project(Practice)

set(CMAKE_CXX_STANDARD 23)

add_executable(new_target1 "practice file 1.cpp")
add_executable(new_target2 "practice file 2.cpp")
add_executable(new_target3 "practice file 3.cpp")
add_executable(new_target4 "practice file 4.cpp")
add_executable(new_target5 "practice file 5.cpp")
add_executable(new_target6 "practice file 6.cpp")
add_executable(new_target7 "practice file 7.cpp")
add_executable(new_target8 "practice file 8.cpp")